<resources>
    <string name="app_name">Popular Movies</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="loading_movies">Loading movies</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="you_re_offline">You\'re offline</string>
    <string name="action_most_popular">MOST POPULAR</string>
    <string name="action_highest_rated">HIGHEST RATED</string>
    <string name="sort_by">Sort by</string>
    <string name="mark_as_favorite">MARK AS FAVORITE</string>
    <string name="reviews"><![CDATA[Reviews>>>]]></string>
    <string name="content_desc_play_image">Button for opening movie trailer video</string>
    <string name="trailers">Trailers:</string>
    <string name="favourite">FAVOURITE</string>
    <string name="favourite_movies">Favourite Movies</string>
    <string name="movie_detail">Movie Details</string>
    <string name="no_data_available">No data available</string>
    <string name="ohh_nothing_to_show">Ohh! Nothing to show</string>
    <string name="reviewed_it">reviewed it</string>
    <string name="review_label">Reviews</string>
    <string name="mark_as_unfavourite">MARK AS UN FAVOURITE</string>
    <string name="marked_as_favourite">Marked as favorite</string>
    <string name="marked_as_unfavourite">Marked as un favourite</string>

</resources>
