<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favourite"
        android:orderInCategory="1"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:title="@string/favourite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort_by"
        android:orderInCategory="2"
        android:title="@string/sort_by"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_most_popular"
        android:orderInCategory="3"
        android:title="@string/action_most_popular"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_highest_rated"
        android:orderInCategory="4"
        android:title="@string/action_highest_rated"
        app:showAsAction="never" />


</menu>