<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <androidx.cardview.widget.CardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:foregroundGravity="center_vertical"
                android:minHeight="150dp"
                app:cardBackgroundColor="#3E9287"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:fontFamily="sans-serif-thin"
                    android:textColor="#FFFFFF"
                    android:textSize="48sp"
                    android:textStyle="bold"
                    tools:ignore="UnusedAttribute"
                    tools:text="Movie Title " />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/imv_poster"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/movie_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imv_poster"
                app:layout_constraintTop_toTopOf="@+id/imv_poster"
                tools:text="TextView" />

            <TextView
                android:id="@+id/tv_date_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/tv_year"
                app:layout_constraintTop_toBottomOf="@+id/tv_year"
                tools:text="TextView" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/tv_date_month"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_month"
                tools:text="TextView" />

            <ToggleButton
                android:id="@+id/tb_favourite"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:maxWidth="96dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/shape_rectangle_unfavourite"
                android:textOff="@string/mark_as_favorite"
                android:textOn="@string/mark_as_unfavourite"
                app:layout_constraintStart_toStartOf="@+id/tv_rating"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

            <TextView
                android:id="@+id/textViewReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/outline_chrome_reader_mode_black_18"
                android:drawableLeft="@drawable/outline_chrome_reader_mode_black_18"
                android:drawablePadding="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/reviews"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/imv_poster"
                app:layout_constraintTop_toBottomOf="@+id/imv_poster" />

            <TextView
                android:justificationMode="inter_word"
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:fontFamily="sans-serif"
                android:paddingBottom="16dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewReview"
                tools:ignore="UnusedAttribute"
                tools:text="TextView" />

            <include
                android:id="@+id/trailerLayout"
                layout="@layout/trailer_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_overview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>